--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -262,6 +262,9 @@
     <ClInclude Include="Obstacle.h">
       <Filter>GameObjects</Filter>
     </ClInclude>
+    <ClInclude Include="PauseScene.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameObject.cpp">
@@ -431,6 +434,9 @@
     </ClCompile>
     <ClCompile Include="Obstacle.cpp">
       <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="PauseScene.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
